--- a/photography site.css
+++ b/photography site.css
@@ -9,18 +9,21 @@ a, a:hover, a:focus, a:active {
     list-style-type:none;
     margin:0;
     padding:0;
-    width:100px;
-
+    width:100%;
 }
 .menu-item{
-    display:inline-block;
+    display:flex;
+    align-items: center;
     /* border:1px solid #000; */
-    width:300vw;
+    /* width:300vw; */
     /* height:50px; */
     /* background:#f00; */
     position:relative;
     /* cursor:pointer; */
 
+}
+.menu-item > .header{
+  flex-shrink: 0;
 }
 .menu-item a:hover{
  text-decoration: none;
@@ -38,21 +41,22 @@ a, a:hover, a:focus, a:active {
     display:inline-block;
     display:none;
     /* border:0px solid #000; */
-    top:-.5vw;
+    /* top:-.5vw;
     left:125px;
-    width:300px;
+    width:300px; */
 
 
     /* height:50px;
     background:#0f0; */
-    position:absolute;
+    /* position:absolute; */
 
-    font-family:freight-big-pro; serif;
+    font-family:freight-big-pro serif;
+    line-height: 0;
 
     /* font style: light; */
 }
-.sub-menu-item{
-font-family:freight-big-pro; serif;
+.sub-menu-item > h4{
+  margin: 0;
 }
 .menu-item:hover ul li{
     display:block;
@@ -229,9 +233,9 @@ html {
 .slide.carousel{
   backround-image:none !important;
   filter:none !important;
-  position: fixed;
-  left: 6vw;
-
+  right: 50%;
+  transform: translate(50%, 0);
+  margin-bottom: 40px
 }
 
 
