--- a/About Me site.css
+++ b/About Me site.css
@@ -8,18 +8,21 @@ a, a:hover, a:focus, a:active {
     list-style-type:none;
     margin:0;
     padding:0;
-    width:100px;
-
+    width:100%;
 }
 .menu-item{
-    display:inline-block;
-    /* border:1px solid #000; */
-    width:300vw;
-    /* height:50px; */
-    /* background:#f00; */
-    position:relative;
-    /* cursor:pointer; */
+  display:flex;
+  align-items: center;
+  /* border:1px solid #000; */
+  /* width:300vw; */
+  /* height:50px; */
+  /* background:#f00; */
+  position:relative;
+  /* cursor:pointer; */
 
+}
+.menu-item > .header{
+  flex-shrink: 0;
 }
 .sub-menu{
     list-style-type:none;
@@ -31,21 +34,25 @@ a, a:hover, a:focus, a:active {
  text-decoration: underline;!important
 }
 .sub-menu-item{
-    display:inline-block;
-    display:none;
-    /* border:0px solid #000; */
-    top:-1.5vw;
-    left:125px;
-    width:300px;
+  display:inline-block;
+  display:none;
+  /* border:0px solid #000; */
+  /* top:-.5vw;
+  left:125px;
+  width:300px; */
 
 
-    /* height:50px;
-    background:#0f0; */
-    position:absolute;
+  /* height:50px;
+  background:#0f0; */
+  /* position:absolute; */
 
-    font-family:freight-big-pro; serif;
+  font-family:freight-big-pro serif;
+  line-height: 0;
 
-    /* font style: light; */
+  /* font style: light; */
+}
+.sub-menu-item > h4{
+  margin: 0;
 }
 .sub-menu-item{
 font-family:freight-big-pro; serif;
