--- a/photography site.css
+++ b/photography site.css
@@ -109,8 +109,8 @@ padding-left: 15vw;
 }
 .ChloeValorsoJewellery{
   position: relative;
-  left: 7vh;
-  top: -10vh;
+  right: 25vh;
+  top: -5vh;
   font-family:freight-big-pro; serif;
   font-size:2vw;
 }
